fixed UI alignment issues

--- a/frontend/src/Clubs/ClubSearch.css
+++ b/frontend/src/Clubs/ClubSearch.css
@@ -5,14 +5,13 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-top: 80px;
 }
 
 /* Clubs Container (Main content and sidebar) */
 .clubs-container {
   display: flex;
   width: 90%;
-  max-width: 1200px;
+  /*max-width: 1200px;*/
   justify-content: space-between;
   margin-top: 20px;
 }
