--- a/frontend/src/Dashboard/Dashboard.css
+++ b/frontend/src/Dashboard/Dashboard.css
@@ -2,11 +2,10 @@
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
-  padding-top: 80px;
 }
 
 .dashboard-container {
@@ -41,8 +40,6 @@
   border-radius: 5px;
   margin: 5px 0;
 }
-
-
 
 .change-password-box {
   margin-top: 20px;
